收藏接口补充提交

--- a/QiHuangDJ/VIewController/dianbo/dianbolist/KHLCategorySliderTableViewCell.xib
+++ b/QiHuangDJ/VIewController/dianbo/dianbolist/KHLCategorySliderTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
@@ -16,20 +16,20 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tzelann_logout" translatesAutoresizingMaskIntoConstraints="NO" id="XXc-tL-QmZ" userLabel="Category Image View">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="tzelann_logout" translatesAutoresizingMaskIntoConstraints="NO" id="XXc-tL-QmZ" userLabel="Category Image View">
                         <rect key="frame" x="8" y="8" width="28" height="28"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="XXc-tL-QmZ" secondAttribute="height" multiplier="1:1" id="OeA-Oj-8x5"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="溪云初起日沉阁" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NKs-Gc-QEA" userLabel="Category Label">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="溪云初起日沉阁" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NKs-Gc-QEA" userLabel="Category Label">
                         <rect key="frame" x="44" y="8" width="220" height="28"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHO-7k-as4" userLabel="Category Subscribe Button">
-                        <rect key="frame" x="272" y="10" width="40" height="23.5"/>
+                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHO-7k-as4" userLabel="Category Subscribe Button">
+                        <rect key="frame" x="272" y="10" width="40" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="40" id="tsH-Y6-fKR"/>
                         </constraints>
@@ -39,7 +39,7 @@
                             <color key="titleShadowColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                     </button>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LcF-wt-SWY">
+                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LcF-wt-SWY">
                         <rect key="frame" x="0.0" y="43" width="320" height="1"/>
                         <color key="backgroundColor" red="0.10196078431372549" green="0.050980392156862744" blue="0.027450980392156862" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
