--- a/QiHuangDJ/QiHuangDJ/ViewController.xib
+++ b/QiHuangDJ/QiHuangDJ/ViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
@@ -19,6 +19,11 @@
                 <outletCollection property="backdropImageViewCollection" destination="ffO-jW-5Sv" id="xCj-J5-yi4"/>
                 <outletCollection property="backdropImageViewCollection" destination="DHn-6T-3Sh" id="ZMt-rz-sgT"/>
                 <outletCollection property="backdropImageViewCollection" destination="Q68-jv-pSJ" id="eqD-ss-dCK"/>
+                <outletCollection property="moduleLabelCollection" destination="XmN-Ms-tIX" id="h4W-0l-Jia"/>
+                <outletCollection property="moduleLabelCollection" destination="MMo-wc-hSa" id="sVd-LH-tKT"/>
+                <outletCollection property="moduleLabelCollection" destination="YoM-T6-RaH" id="6Ii-xj-QJv"/>
+                <outletCollection property="moduleLabelCollection" destination="pnC-Ny-yzO" id="fwh-2f-VG1"/>
+                <outletCollection property="moduleLabelCollection" destination="Xgw-wt-y5x" id="MQc-Wz-gOX"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -28,6 +33,20 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eUq-ZH-kh4" userLabel="Anchor View">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="715"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6rg-Sd-UqQ" userLabel="Label Anchor">
+                            <rect key="frame" x="210" y="0.0" width="110" height="30"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="6rg-Sd-UqQ" secondAttribute="height" multiplier="11:3" id="6gU-Oe-bfL"/>
+                                <constraint firstAttribute="height" constant="30" id="GGw-b4-gFG"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="6rg-Sd-UqQ" secondAttribute="trailing" id="D9B-n6-GJO"/>
+                        <constraint firstItem="6rg-Sd-UqQ" firstAttribute="top" secondItem="eUq-ZH-kh4" secondAttribute="top" id="RCe-y9-caG"/>
+                    </constraints>
                 </view>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" translatesAutoresizingMaskIntoConstraints="NO" id="89f-sG-F2m" userLabel="Main Scroll View">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="715"/>
@@ -39,7 +58,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2YR-lX-jvN">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
+                                            <rect key="frame" x="-34" y="-99" width="36" height="42"/>
                                         </imageView>
                                     </subviews>
                                     <constraints>
@@ -124,13 +143,51 @@
                                         <action selector="dota2:" destination="-1" eventType="touchUpInside" id="BBL-Kx-KEo"/>
                                     </connections>
                                 </button>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="直播" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XmN-Ms-tIX" userLabel="Live Label">
+                                    <rect key="frame" x="210" y="350" width="110" height="19.5"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="七煌艺人" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MMo-wc-hSa" userLabel="Entertainers Label">
+                                    <rect key="frame" x="210" y="435" width="110" height="19.5"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="炉石传说" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YoM-T6-RaH" userLabel="HearthStone Label">
+                                    <rect key="frame" x="210" y="520" width="110" height="19.5"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="英雄联盟" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pnC-Ny-yzO" userLabel="L.O.L. Label">
+                                    <rect key="frame" x="210" y="605" width="110" height="19.5"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="刀塔2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xgw-wt-y5x" userLabel="DotA Label">
+                                    <rect key="frame" x="210" y="690" width="110" height="19.5"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
+                                <constraint firstItem="XmN-Ms-tIX" firstAttribute="trailing" secondItem="yKI-Zs-yps" secondAttribute="trailing" id="0YR-M7-MHP"/>
+                                <constraint firstItem="Xgw-wt-y5x" firstAttribute="bottom" secondItem="uz6-g4-Gns" secondAttribute="bottom" constant="-12" id="638-6B-vh9"/>
+                                <constraint firstItem="YoM-T6-RaH" firstAttribute="trailing" secondItem="8VV-Ro-o7w" secondAttribute="trailing" id="6mZ-Nv-c7B"/>
+                                <constraint firstItem="YoM-T6-RaH" firstAttribute="leading" secondItem="MMo-wc-hSa" secondAttribute="leading" id="71c-gf-sar"/>
+                                <constraint firstItem="MMo-wc-hSa" firstAttribute="bottom" secondItem="x6d-LO-7XK" secondAttribute="bottom" constant="-12" id="7Vf-6j-4y6"/>
                                 <constraint firstItem="DHn-6T-3Sh" firstAttribute="trailing" secondItem="K6J-Kn-ueM" secondAttribute="trailing" id="89l-cC-VTb"/>
                                 <constraint firstItem="ffO-jW-5Sv" firstAttribute="height" secondItem="ch3-tj-caD" secondAttribute="height" id="8hR-jV-Dl5"/>
                                 <constraint firstItem="SjN-OH-bcf" firstAttribute="leading" secondItem="UIy-TT-MCX" secondAttribute="leading" id="A17-JH-AxF"/>
+                                <constraint firstItem="YoM-T6-RaH" firstAttribute="leading" secondItem="pnC-Ny-yzO" secondAttribute="leading" id="B11-cM-k5t"/>
+                                <constraint firstItem="XmN-Ms-tIX" firstAttribute="bottom" secondItem="yKI-Zs-yps" secondAttribute="bottom" constant="-12" id="Dcj-1h-op1"/>
                                 <constraint firstItem="yKI-Zs-yps" firstAttribute="trailing" secondItem="Sjr-FT-pIw" secondAttribute="trailing" id="Dg8-MG-ydx"/>
+                                <constraint firstItem="K6J-Kn-ueM" firstAttribute="bottom" secondItem="pnC-Ny-yzO" secondAttribute="bottom" constant="12" id="DjG-1h-Xim"/>
                                 <constraint firstItem="uz6-g4-Gns" firstAttribute="width" secondItem="K6J-Kn-ueM" secondAttribute="width" id="E0R-lM-o3e"/>
                                 <constraint firstItem="x6d-LO-7XK" firstAttribute="width" secondItem="8VV-Ro-o7w" secondAttribute="width" id="E8i-IQ-msY"/>
                                 <constraint firstItem="x6d-LO-7XK" firstAttribute="top" secondItem="ch3-tj-caD" secondAttribute="top" id="FId-C5-SRx"/>
@@ -144,12 +201,15 @@
                                 <constraint firstItem="DHn-6T-3Sh" firstAttribute="top" secondItem="ffO-jW-5Sv" secondAttribute="bottom" id="NtL-qs-6pk"/>
                                 <constraint firstAttribute="trailing" secondItem="FwY-nF-WP2" secondAttribute="trailing" id="O7X-oY-Zuu"/>
                                 <constraint firstItem="SjN-OH-bcf" firstAttribute="top" secondItem="UIy-TT-MCX" secondAttribute="top" id="PCx-Ms-zjy"/>
+                                <constraint firstItem="Xgw-wt-y5x" firstAttribute="trailing" secondItem="uz6-g4-Gns" secondAttribute="trailing" id="RQU-Jy-qbY"/>
                                 <constraint firstItem="DHn-6T-3Sh" firstAttribute="bottom" secondItem="K6J-Kn-ueM" secondAttribute="bottom" id="Udt-7f-3QZ"/>
+                                <constraint firstItem="YoM-T6-RaH" firstAttribute="bottom" secondItem="8VV-Ro-o7w" secondAttribute="bottom" constant="-12" id="W8z-Ci-QVG"/>
                                 <constraint firstItem="yKI-Zs-yps" firstAttribute="top" secondItem="Sjr-FT-pIw" secondAttribute="top" id="WRH-zm-Suj"/>
                                 <constraint firstAttribute="trailing" secondItem="ffO-jW-5Sv" secondAttribute="trailing" id="XTo-Ag-Uy3"/>
                                 <constraint firstItem="8VV-Ro-o7w" firstAttribute="width" secondItem="K6J-Kn-ueM" secondAttribute="width" id="YCk-3y-JpI"/>
                                 <constraint firstItem="DHn-6T-3Sh" firstAttribute="leading" secondItem="UIy-TT-MCX" secondAttribute="leading" id="YG8-pe-5Oc"/>
                                 <constraint firstAttribute="bottom" secondItem="Q68-jv-pSJ" secondAttribute="bottom" id="Ybk-gE-IZI"/>
+                                <constraint firstItem="K6J-Kn-ueM" firstAttribute="trailing" secondItem="pnC-Ny-yzO" secondAttribute="trailing" id="a5q-ve-Bkd"/>
                                 <constraint firstItem="ch3-tj-caD" firstAttribute="height" secondItem="Sjr-FT-pIw" secondAttribute="height" id="aEg-ju-18c"/>
                                 <constraint firstItem="Q68-jv-pSJ" firstAttribute="top" secondItem="DHn-6T-3Sh" secondAttribute="bottom" id="awq-NQ-HRN"/>
                                 <constraint firstItem="ffO-jW-5Sv" firstAttribute="top" secondItem="ch3-tj-caD" secondAttribute="bottom" id="bSF-Jg-Gy8"/>
@@ -164,6 +224,7 @@
                                 <constraint firstItem="FwY-nF-WP2" firstAttribute="top" secondItem="SjN-OH-bcf" secondAttribute="bottom" id="hJf-ec-pGF"/>
                                 <constraint firstItem="x6d-LO-7XK" firstAttribute="trailing" secondItem="ch3-tj-caD" secondAttribute="trailing" id="ium-DX-r3m"/>
                                 <constraint firstItem="1zx-ig-2YG" firstAttribute="trailing" secondItem="SjN-OH-bcf" secondAttribute="trailing" constant="-16" id="lvY-cg-NoZ"/>
+                                <constraint firstItem="MMo-wc-hSa" firstAttribute="leading" secondItem="XmN-Ms-tIX" secondAttribute="leading" id="mi7-aP-xOf"/>
                                 <constraint firstItem="ch3-tj-caD" firstAttribute="leading" secondItem="UIy-TT-MCX" secondAttribute="leading" id="ngI-Xd-iTl"/>
                                 <constraint firstItem="DHn-6T-3Sh" firstAttribute="top" secondItem="K6J-Kn-ueM" secondAttribute="top" id="oZ5-wT-Qor"/>
                                 <constraint firstItem="Sjr-FT-pIw" firstAttribute="top" secondItem="FwY-nF-WP2" secondAttribute="bottom" id="of0-Tk-MdT"/>
@@ -173,7 +234,9 @@
                                 <constraint firstItem="yKI-Zs-yps" firstAttribute="bottom" secondItem="Sjr-FT-pIw" secondAttribute="bottom" id="vdy-mk-RhI"/>
                                 <constraint firstItem="x6d-LO-7XK" firstAttribute="bottom" secondItem="ch3-tj-caD" secondAttribute="bottom" id="vuG-rF-C4C"/>
                                 <constraint firstItem="DHn-6T-3Sh" firstAttribute="height" secondItem="ffO-jW-5Sv" secondAttribute="height" id="yQ6-WG-P02"/>
+                                <constraint firstItem="MMo-wc-hSa" firstAttribute="trailing" secondItem="x6d-LO-7XK" secondAttribute="trailing" id="yTQ-5N-cwu"/>
                                 <constraint firstItem="ffO-jW-5Sv" firstAttribute="bottom" secondItem="8VV-Ro-o7w" secondAttribute="bottom" id="ykq-7F-fsS"/>
+                                <constraint firstItem="Xgw-wt-y5x" firstAttribute="leading" secondItem="pnC-Ny-yzO" secondAttribute="leading" id="z2K-44-GjP"/>
                                 <constraint firstAttribute="trailing" secondItem="DHn-6T-3Sh" secondAttribute="trailing" id="zgF-0Y-YYP"/>
                             </constraints>
                         </view>
@@ -194,6 +257,7 @@
                 <constraint firstItem="89f-sG-F2m" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Oc4-Ci-xY7"/>
                 <constraint firstAttribute="trailing" secondItem="89f-sG-F2m" secondAttribute="trailing" id="QpD-qr-k72"/>
                 <constraint firstAttribute="trailing" secondItem="eUq-ZH-kh4" secondAttribute="trailing" id="TPx-Y4-BOD"/>
+                <constraint firstItem="XmN-Ms-tIX" firstAttribute="leading" secondItem="6rg-Sd-UqQ" secondAttribute="leading" id="VaP-QM-YJm"/>
                 <constraint firstItem="eUq-ZH-kh4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Zem-Qm-7nl"/>
                 <constraint firstAttribute="bottom" secondItem="89f-sG-F2m" secondAttribute="bottom" id="yFl-hV-M2S"/>
             </constraints>
